# ai-job-search-agent

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  idea.txt  pyproject.toml  requirements.txt
agent/: __init__.py  main.py  orchestrator.py
agent/memory/: __init__.py  memory_manager.py
agent/modules/: __init__.py  company_sentiment.py  cover_letter_generator.py  job_matcher.py  resume_analyzer.py  salary_predictor.py
ai_layer/patches/: job_search_ai_integration.md
config/: .env.example  agent_config.yaml
docker/: Dockerfile  docker-compose.yml
tests/: __init__.py  test-scenarios.md  test_agent.py
tools/: __init__.py  config.py  hf_model_manager.py  knowledge_updater.py  llm_client.py
upstream/: README.md
