[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-job-search-enhanced"
version = "1.0.0"
description = "Semantic career intelligence agent — match smarter, earn more, close gaps faster"
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"

[project.scripts]
ai-job-search = "agent.main:app_cli"

[tool.setuptools.packages.find]
include = ["agent*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
